add - Index# - индекс

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,3 +12,32 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Gra - генерация pdf-дипломов для контрибуторов</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
+
+<body>
+
+<div class="container mt-4">
+  <div class="row d-block">
+    <div class="col-sm-12" id="content">
+      <%= bootstrap_flash %>
+      <%= yield %>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
