fix - Index#show - отбор id созданных записей

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,8 +1,1 @@
-<form class="form-inline" action="/url">
-  <label class="sr-only" for="inlineFormInputName2">Repo</label>
-  <input type="text" class="form-control mb-2 mr-sm-2"
-         id="url"
-         placeholder="https://github.com/rails/rails">
-
-  <button type="submit" class="btn btn-primary mb-2">Search</button>
-</form>
+<%= render 'form' %>
