--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
   <div class="row d-block">
     <div class="col-sm-12" id="content">
       <%= bootstrap_flash %>
-      <h1>Gra - генерация pdf-дипломов для контрибуторов репозитория</h1>
+      <h1>Gra</h1>
+      <h2>GithubRepoAwards</h2>
+      <h3>генерация pdf-дипломов для контрибуторов репозитория</h3>
       <br>
       <%= yield %>
     </div>
