--- a/app/views/index/show.html.erb
+++ b/app/views/index/show.html.erb
@@ -1,15 +1,10 @@
-<div class="row">
-  <form class="form-inline col-md-12" action="/url" method="get">
-    <label class="sr-only" for="url">Repo</label>
-    <input type="text" class="form-control mb-2 mr-sm-2 span-10"
-           id="url"
-           name="url"
-           placeholder="https://github.com/rails/rails"
-           value="<%= params[:url] %>">
-    <button type="submit" class="btn btn-primary mb-2 span-2">Search</button>
-  </form>
-</div>
-<% if @commiters.present? %>
+<%= render 'form' %>
+<% unless @committers.present? %>
+  <div class="alert alert-danger" role="alert">
+    Ошибка получения данных по репозиторию.
+    Проверьте адрес и повторите.
+  </div>
+<% else @committers.present? %>
   <table class="table">
     <thead>
     <tr>
@@ -21,10 +16,10 @@
     </thead>
     <% @commiters.each do |cmtr| %>
       <tr>
-        <td><%= cmtr[:place] %></td>
-        <th><%= cmtr[:author] %></th>
-        <td><%= cmtr[:total] %></td>
-        <td><a href="pdf/#{cmtr[:author]}/#{cmtr[:place]}">download pdf</a></td>
+        <td><%= cmtr.place %></td>
+        <th><%= cmtr.author %></th>
+        <td><%= cmtr.total %></td>
+        <td><a href="pdf/#{cmtr.id}">download pdf</a></td>
       </tr>
     <% end %>
   </table>
