--- a/app/views/index/_form.html.erb
+++ b/app/views/index/_form.html.erb
@@ -1,10 +1,10 @@
-<form class="form-inline" action="/url">
-  <label class="sr-only" for="inlineFormInputName2">Repo</label>
-  <input type="text" class="form-control mb-2 mr-sm-2"
+<form class="form-inline col-md-12 " action="/url">
+<!--  <label class="sr-only" for="inlineFormInputName2">Repo</label>-->
+  <input type="text" class="form-control mb-2 mr-sm-2 col-md-9 "
          id="url"
          name="url"
          placeholder="https://github.com/rails/rails"
          value="<%= params[:url] %>">
 
-  <button type="submit" class="btn btn-primary mb-2">Search</button>
+  <button type="submit" class="btn btn-primary mb-2 col-md-2">Search</button>
 </form>
