edit - Committer - рефакторинг методов

--- a/app/views/index/show.html.erb
+++ b/app/views/index/show.html.erb
@@ -9,9 +9,9 @@
   <table class="table">
     <thead>
     <tr>
-      <th>Place</th>
-      <th>Committer</th>
-      <th>Commits</th>
+      <th>Место</th>
+      <th>Комитер</th>
+      <th>Комитов</th>
       <th></th>
     </tr>
     </thead>
