--- a/app/views/index/_form.html.erb
+++ b/app/views/index/_form.html.erb
@@ -1,10 +1,11 @@
 <form class="form-inline col-md-12 " action="/url">
-<!--  <label class="sr-only" for="inlineFormInputName2">Repo</label>-->
+  <!--  <label class="sr-only" for="inlineFormInputName2">Repo</label>-->
   <input type="text" class="form-control mb-2 mr-sm-2 col-md-9 "
          id="url"
          name="url"
          placeholder="https://github.com/rails/rails"
-         value="<%= params[:url] %>">
+         value="<%= params[:url] %>"
+         autofocus="autofocus">
 
   <button type="submit" class="btn btn-primary mb-2 col-md-2">Search</button>
 </form>
