--- a/app/views/index/show.html.erb
+++ b/app/views/index/show.html.erb
@@ -20,7 +20,7 @@
         <td><%= cmtr.place %></td>
         <th><%= cmtr.author %></th>
         <td><%= cmtr.total %></td>
-        <td><a href="pdf/#{cmtr.id}" class="btn btn-info float-right col-md-6">download pdf</a></td>
+        <td><a href="<%= pdf_path(cmtr.id) %>" class="btn btn-info float-right col-md-6">download pdf</a></td>
       </tr>
     <% end %>
   </table>
