--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,8 @@
   <div class="row d-block">
     <div class="col-sm-12" id="content">
       <%= bootstrap_flash %>
-      <h1>Gra</h1>
-      <h2>GithubRepoAwards</h2>
-      <h3>генерация pdf-дипломов для контрибуторов репозитория</h3>
+      <h1><span  class="text-primary">Gra</span><small> / GithubRepoAwards</small></h1>
+      <h6>генерация pdf-дипломов для контрибуторов репозитория</h6>
       <br>
       <%= yield %>
     </div>
