add - / - feature spec

--- a/app/views/index/_form.html.erb
+++ b/app/views/index/_form.html.erb
@@ -5,8 +5,9 @@
       <input type="text" class="form-control"
              id="url"
              name="url"
-             placeholder="https://github.com/rails/rails"
+             placeholder="заполните url, например - https://github.com/rails/rails"
              value="<%= params[:url] %>"
+             required="required"
              autofocus="autofocus">
     </div>
     <div class="col-auto w-25 align-top">
