--- a/app/views/index/show.html.erb
+++ b/app/views/index/show.html.erb
@@ -32,7 +32,7 @@
       <td colspan="3"></td>
       <td>
         <a href="<%= zip_path(@committers.first.stock) %>" class="btn btn-primary w-100" download="zip">
-          Download Zip (<%= @committers.count %>)
+          download Zip (<%= @committers.count %>)
         </a>
       </td>
     </tr>
