--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <div class="row d-block">
     <div class="col-sm-12" id="content">
       <%= bootstrap_flash %>
-      <h1><span  class="text-primary">Gra</span><small> / GithubRepoAwards</small></h1>
+      <h1><a href="/">Gra</a><small> / GithubRepoAwards</small></h1>
       <h6>генерация pdf-дипломов для контрибуторов репозитория</h6>
       <br>
       <%= yield %>
