--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -19,7 +18,7 @@
   <div class="row d-block">
     <div class="col-sm-12" id="content">
       <%= bootstrap_flash %>
-      <h1><a href="/">Gra</a><small> / GithubRepoAwards</small></h1>
+      <h1><a href="/">GRA</a> <span class="repo_abrr">/ GithubRepoAwards</span></h1>
       <h6>генерация pdf-дипломов для контрибуторов репозитория</h6>
       <br>
       <%= yield %>
