edit - Index#_form - method=post

--- a/app/views/index/_form.html.erb
+++ b/app/views/index/_form.html.erb
@@ -1,4 +1,5 @@
-<form action="/url">
+<form action="/url" method="post">
+  <%= token_tag(nil) %>
   <div class="form-row align-items-center w-100">
     <div class="col-auto w-75">
       <label class="sr-only" for="inlineFormInput">Repo</label>
